# LearningCmake

./: CMakeLists.txt  setup.sh  vsopen.bat  xcodeopen.sh
core/: CMakeLists.txt  common.cmake
core/src/hello-lib/: hello.cpp  hello.h
include/testprogram/: myinclude.h
src/: main.cpp  main2.cpp
src/hello/: main.cpp
src/hello-lib/: hello.h
src/testprogram/: main.cpp
src/testprogram/subdirectory/: hello.cpp
